fixed fade-bottom on safari

--- a/_sass/mixins/_themes.scss
+++ b/_sass/mixins/_themes.scss
@@ -242,7 +242,7 @@
             position: absolute;
             left: 0; right: 0; bottom: 0;
             height: map-get($spacings, l);
-            background: linear-gradient(to bottom, transparent, $background-color 80%);
+            background: linear-gradient(to bottom, rgba($background-color, 0), $background-color 80%);
             pointer-events: none;
         }
     }
